tests/snapshots/type_error_mismatch.expected
-- TYPE ERROR ----------------------------------------------

test.gn:1:13

I found a type mismatch.

  I expected:  String
  But found:   Int

1 | let x = 1 + "hello"
                ^^^^^^^
